name:               hello-reflex-vty
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10

executable hello-reflex-vty
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable drag-hello-reflex-vty
  hs-source-dirs:   app
  main-is:          dragHelloWorld.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable drag2-hello-reflex-vty
  hs-source-dirs:   app
  main-is:          dragRectangle.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010