name:               hello-reflex-vty
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10

-- executable default
--   hs-source-dirs:   app
--   main-is:          Main.hs
--   ghc-options:      -threaded -Wall
--   build-depends:
--       base
--     , reflex
--     , reflex-vty
--     , text
--     , vty
--     , ref-tf
--   default-language: Haskell2010

executable helloWorld
  hs-source-dirs:   app
  main-is:          helloWorld.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable dragHelloWorld
  hs-source-dirs:   app
  main-is:          dragHelloWorld.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable dragRectangle
  hs-source-dirs:   app
  main-is:          dragRectangle.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable dragEntity
  hs-source-dirs:   app
  main-is:          dragEntity.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable resizeEntity
  hs-source-dirs:   app
  main-is:          resizeEntity.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable dragNResize
  hs-source-dirs:   app
  main-is:          dragNResize.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable dragNResize2
  hs-source-dirs:   app
  main-is:          dragNResize2.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010

executable typicalWindow
  hs-source-dirs:   app
  main-is:          typicalWindow.hs
  ghc-options:      -threaded -Wall
  build-depends:
      base
    , reflex
    , reflex-vty
    , text
    , vty
    , ref-tf
  default-language: Haskell2010
